[script] add Vector3f constants

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -400,7 +400,7 @@
                     <input type="checkbox" id="execscript_use_implicit_main" ref=${this.use_implicit_main_ref} checked />
                     <button title="tas::toggleDump()" onClick=${ () => this.do_toggle_record() } class="pushbutton">tas dump</button>
                     <br/>
-                    <textarea class="as_source" placeholder='// check the blue AS📖 button for help \n\ntas::input(30, KEY_A|KEY_B, 32767, -32768, 0, 0);\n\nactor::createAndWatch( \n    1, "SpObj_LiftGeneratorWing_A_01", \n    Player.pos_x, Player.pos_y - 5, Player.pos_z\n);' ref=${this.script_text_ref}></textarea>
+                    <textarea class="as_source" placeholder='// check the blue AS📖 button for help \n\ntas::input(30, KEY_A|KEY_B, 32767, -32768, 0, 0);\n\nactor::createAndWatch( \n    1, "SpObj_LiftGeneratorWing_A_01", \n    Player.pos + 5*Vector3f::DOWN\n);' ref=${this.script_text_ref}></textarea>
                     <textarea placeholder="[tas output]" ref=${this.output_text_ref}></textarea>
                 </div>
             `;
@@ -462,6 +462,7 @@
                 case "s": pos[2] += delta; break;
                 case "n": pos[2] -= delta; break;
             }
+            // TODO stop using local state.pos, just send `ActorWatcher::get(${slot_i}).pos += Vector3f::${dir} * ${delta};`
             this.do_paste_coords(slot_i, pos);
         }
 
