--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,16 +5,21 @@
     <link rel="stylesheet" type="text/css" href="assets/style.css" />
     <title>totk-lotuskit</title>
 <script type="module">
+    // init preact
     import { createRef, h, render, Component } from "/assets/js-vendor/preact@10.23.1.mjs";
     import htm from "/assets/js-vendor/htm@3.1.1.mjs";
     const html = htm.bind(h);
     import { signal } from "/assets/js-vendor/preact-signals@1.3.0.mjs";
-    import fuzzysort from "/assets/js-vendor/fuzzysort@3.1.0.mjs";
 
+    // init syntax highlighting
+    import { PrismCustomInit, PrismCustomHighlight } from "/assets/js-vendor/prismjs-custom@1.29.0.mjs";
+    PrismCustomInit();
+
+    // init fuzzy search
+    import fuzzysort from "/assets/js-vendor/fuzzysort@3.1.0.mjs";
     // prepare actor search
     import { Actor_MasterList_prepare_fuzzysort } from "/assets/data/Actor_MasterList.mjs";
     const Actor_MasterList_fuzzysort = Actor_MasterList_prepare_fuzzysort(fuzzysort);
-
     // prepare eventflow search
     import { Event_NameList_prepare_fuzzysort } from "/assets/data/Event_NameList.mjs";
     const Event_NameList_fuzzysort = Event_NameList_prepare_fuzzysort(fuzzysort);
@@ -371,6 +376,7 @@
             super();
 
             this.script_text_ref = createRef();
+            this.script_syntax_out_ref = createRef();
             this.use_implicit_main_ref = createRef();
 
             WSTransport.subscribe_ns("/tas/Record", this.recv_tas_record.bind(this))
@@ -394,6 +400,11 @@
             el.value += payload["msg"];
         }
 
+        update_syntax_highlight = (e) => {
+            //console.log('fsdfds', this.script_text_ref.current);
+            PrismCustomHighlight(this.script_text_ref.current, this.script_syntax_out_ref.current);
+        }
+
         render(props, state) {
             // TODO local file save/load, copy, ...
             // TODO ctrl+enter do_exec()
@@ -405,7 +416,8 @@
                     <input type="checkbox" id="execscript_use_implicit_main" ref=${this.use_implicit_main_ref} checked />
                     <button title="tas::toggleDump()" onClick=${ () => this.do_toggle_record() } class="pushbutton">tas dump</button>
                     <br/>
-                    <textarea class="as_source" placeholder='// check the blue AS📖 button for help \nPlayer.pos += 100*Vector3f::UP;\n\ntas::input(30, KEY_A|KEY_B, 32767,-32768, 0,0);\ntas::input(15, KEY_B, 0.5*STICK_UP_MAX /*, 8000*STICK_LEFT */);\n\nactor::createAndWatch( \n    1, "SpObj_LiftGeneratorWing_A_01", \n    Player.pos + 5*Vector3f::DOWN\n);' ref=${this.script_text_ref}></textarea>
+                    <textarea class="as_source" placeholder='// check the blue AS📖 button for help \nPlayer.pos += 100*Vector3f::UP;\n\ntas::input(30, KEY_A|KEY_B, 32767,-32768, 0,0);\ntas::input(15, KEY_B, 0.5*STICK_UP_MAX /*, 8000*STICK_LEFT */);\n\nactor::createAndWatch( \n    1, "SpObj_LiftGeneratorWing_A_01", \n    Player.pos + 5*Vector3f::DOWN\n);' ref=${this.script_text_ref} onInput=${this.update_syntax_highlight} spellcheck="false"></textarea>
+                    <div ref=${this.script_syntax_out_ref} style="white-space:pre;"></div>
                     <textarea placeholder="[tas output]" ref=${this.output_text_ref}></textarea>
                 </div>
             `;
